# simple-secrets-manager

./: .deepsource.toml  .dockerignore  .gitignore  Dockerfile  README.md  app.py  build.sh  connection.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py
.github/: CODEOWNERS  CONTRIBUTING.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml
Access/: is_auth.py  tokens.py  userpass.py
Api/: api.py
Api/errors/: errors.py
Api/resources/: KV_resources.py
Api/resources/auth/: tokens_resource.py  userpass_resource.py
Api/resources/secrets/: kv_resource.py
Engines/: __init__.py  kv.py
docs/: README_dockerhub.md
docs/source/: conf.py  index.rst  installation.rst
