[project]
name = "simple-secrets-manager"
version = "1.2.1"
description = "Securely store and deliver tokens, passwords, API keys, and other secrets using HTTP API, Swagger UI, or Python Package."
authors = [
    { name = "Krishnakanth Alagiri", email = "39209037+bearlike@users.noreply.github.com" },
]
license = { text = "CC0 1.0 Universal" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "flask-httpauth (>4,<5)",
    "flask-restx (>=0.5.1)",
    "pymongo (>4,<5)",
]

[project.urls]
Repository = "https://github.com/bearlike/simple-secrets-manager.git"
Issues = "https://github.com/bearlike/simple-secrets-manager/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"
